WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139737
[Curl] Compile error, setWasCached method has been removed.
https://bugs.webkit.org/show_bug.cgi?id=139737
Summary
[Curl] Compile error, setWasCached method has been removed.
peavo
Reported
2014-12-17 11:38:33 PST
The ResourceResponseBase::setWasCached() method has been replaced with ResourceResponseBase::setSource().
Attachments
Patch
(1.45 KB, patch)
2014-12-17 11:45 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-12-17 11:45:38 PST
Created
attachment 243446
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-17 13:14:55 PST
Comment on
attachment 243446
[details]
Patch Clearing flags on attachment: 243446 Committed
r177458
: <
http://trac.webkit.org/changeset/177458
>
WebKit Commit Bot
Comment 3
2014-12-17 13:15:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug