[Curl] Compile error, setWasCached method has been removed. https://bugs.webkit.org/show_bug.cgi?id=139737

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-12-17
Reviewed by Alex Christensen.

The ResourceResponseBase::setWasCached() method has been replaced
with ResourceResponseBase::setSource().

* platform/network/curl/CurlCacheEntry.cpp:
(WebCore::CurlCacheEntry::setResponseFromCachedHeaders):

Canonical link: https://commits.webkit.org/157648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177458 268f45cc-cd09-0410-ab3c-d52691b4dbfc